--- a/MentalFitnessTracker-main/templates/index.html
+++ b/MentalFitnessTracker-main/templates/index.html
@@ -154,7 +154,7 @@
             var feature9Input = document.getElementsByName('query9')[0];
 
             if (feature1Input.value.trim() === '') {
-                alert('Please enter your Country.');
+                alert('Which country are you from?');
                 return false;
             }
 
