--- a/MentalFitnessTracker-main/templates/contact.html
+++ b/MentalFitnessTracker-main/templates/contact.html
@@ -66,8 +66,8 @@
             If you have any questions, feedback, or concerns regarding the Mental Fitness Tracker web application,
             you can reach out to us using the following contact information:
         </p>
-        <p>Email: shabhishek055@gmail.com</p>
-        <p>Phone: +919575676062</p>
+        <p>Email: farzihum92@gmail.com</p>
+        <p>Phone: +91 9911234848</p>
         <p>
             We value your input and will do our best to respond to your inquiries in a timely manner.
             Your mental well-being is important to us, and we appreciate your interest in our application.
